--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chuck Norris</title>
-
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="header">
-        <h1 class="header__title">CHUCK NORRIS JOKES</h1>
-        <p class="header__subtitle">Select the type of jokes you want</p>
+      <h1 class="header__title">CHUCK NORRIS JOKES</h1>
+      <p class="header__subtitle">Select the type of jokes you want:</p>
     </header>
-<div class="categories">
-
-  
-</div>
-<div>
-    <button class="btn-reset" >RESET</button>
-    <button class="btn-newJoke">NEW JOKE</button>
-</div>
-<div class="container-joke">
-    
-</div>
-
+    <div class="categories"></div>
+    <div class="create">
+      <button class="create__btn-reset">RESET</button>
+      <button class="create__btn-newJoke">NEW JOKE</button>
+    </div>
+    <div class="joke">
+      <div class="joke__container-joke"></div>
+      <img class="joke__img" src="/assets/chuck.png" alt="Chuck Norris" />
+    </div>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
